fix disappearing menu-drawer content seen with landscape orientations on mobile
I notice with an expanded 'Settings ...' submenu in a landscape
orientation on mobile devices, the menu items blip on then off the screen
annoyingly.

It appears the .mdl-menu__container class has a z-index of -1
that kicks in, rendering the submenu items invisible.

Unset the z-index in this scenario to restore visibility of settings items.
This also allows the menu to scroll nicely for content that is clipped
by the viewport.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,12 @@
   text-transform: none;
 }
 
+/* Fix visibility issue with long menu drawer content (especially on landscape mobile). */
+/* Otherwise content blips behind mdl-menu__container's -1 z-index. */
+.mdl-layout__drawer .mdl-menu__container.is-upgraded.is-visible {
+  z-index: unset;
+}
+
 .mdl-layout__drawer .mdl-menu {
   /* Make submenu container width same as menu drawer width. */
   min-width: 240px;
